--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+}
+
+#origami-container {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border: 2px solid #000;
+}
+
+#paper {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    transform-origin: top left;
+}
 
